--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Some scripts to help organize Pokemon Go Points of Interest.",
   "main": "index.js",
   "dependencies": {
-    "afar": "^1.0.2"
+    "afar": "^1.0.2",
+    "s2-geometry": "^1.2.9"
   },
   "devDependencies": {},
   "scripts": {
